# openlanhouse

./: .gitignore  README.md  TODO
documentation/: REQUISITES.txt
documentation/case of uses/: 1-0.dia~  1-1.dia~  1-4.dia  1-9.dia  1.dia  1.dia~  2-8.dia  2.dia  2.dia~  3.dia~  4.dia~  5.dia  5.dia~  6.dia  client.dia  general.dia  general.dia~
openlh-client/: AUTHORS  ChangeLog  INSTALL  Makefile.am  TODO  autogen.sh  configure.ac  glade2gtkbuilder  setup_win32.py
openlh-client/data/: Makefile.am  openlh-client-config.desktop.in.in  openlh-client.desktop.in.in  openlh-client.schemas.in
openlh-client/data/glade/: Makefile.am  connect_server.glade  login.glade  main.glade  prefs.glade
openlh-client/data/icons/: Makefile.am
openlh-client/data/ui/: Makefile.am  applet.ui  connect_server.ui  login.ui  main.ui  prefs.ui
openlh-client/debian/: changelog  control  copyright  files  menu  openlh-client.substvars  rules
openlh-client/gnomeapplet/: GNOME_OpenlhApplet.xml  GNOME_OpenlhClientApplet.server.in.in  Makefile.am  applet.c  applet.h  load.c
openlh-client/po/: LINGUAS  POTFILES.in  es_ES.po  openlh-client.pot  pt_BR.po
openlh-client/src/: Makefile.am  openlh-client  openlh-client-config
openlh-client/src/OpenlhClient/: Makefile.am  __init__.py  config.py  config.py.in  dbus_manager.py  defaults.py  globals.py  logout_actions.py  main.py  script_actions.py  utils.py
openlh-client/src/OpenlhClient/ui/: Makefile.am  __init__.py  background.py  dialogs.py  icons.py  login.py  prefs.py  tray.py  utils.py
openlh-client/src/pygdm/: Makefile.am  gdm-logout-action.c  main.c
openlh-core/: AUTHORS  Makefile.am  build_deb_package.sh  configure.ac  setup_win32.py
openlh-core/debian/: changelog  control  files  openlh-core.substvars  rules
openlh-core/src/: Makefile.am
openlh-core/src/OpenlhCore/: ConfigClient.py  Makefile.am  __init__.py  utils.py
openlh-core/src/OpenlhCore/net/: Makefile.am  __init__.py  client.py  constants.py  request_handler.py  response.py  server.py
openlh-core/src/OpenlhCore/net/backends/: Makefile.am  __init__.py  gnutls_backend.py  openssl_backend.py
openlh-core/src/OpenlhCore/net/certgen/: Makefile.am  __init__.py  gnutls_certgen.py  openssl_certgen.py
openlh-core/src/OpenlhCore/ui/: Makefile.am  __init__.py  notification.py
openlh-core/src/certtool/: Makefile.am  certtool.c  privkey.c  privkey.h  self-signed.c  self-signed.h  template.c  template.h
openlh-daemon/src/: openlh-daemon
openlh-daemon/src/openlh/core/: config_client.py  os_utils.py
openlh-daemon/src/openlh/daemon/: config.py  defaults.py  globals.py  main.py
openlh-daemon/src/openlh/daemon/db/: Makefile.am  __init__.py
openlh-server/: AUTHORS  ChangeLog  Makefile.am  README  TODO  configure.ac  glade2gtkbuilder  setup_win32.py
openlh-server/data/: Makefile.am  openlh-server.desktop.in.in  openlh-server.schemas.in
openlh-server/data/glade/: Makefile.am  add_credit.glade  add_machine.glade  add_time.glade  add_user.glade  block_machine.glade  cash_flow_new_item.glade  clear_history.glade  edit_close_apps.glade  edit_user.glade  history.glade  machine_info.glade  main.glade  new_ticket.glade  plugins.glade  prefs.glade  remove_credit.glade  remove_time.glade  set_price_per_hour.glade  unblock_machine.glade  userinfo.glade  view_all_tickets.glade
openlh-server/data/icons/: Makefile.am
openlh-server/data/icons/status/: Makefile.am
openlh-server/data/ui/: Makefile.am  add_credit.ui  add_machine.ui  add_machine_category.ui  add_opendebt.ui  add_time.ui  add_user.ui  add_user_category.ui  block_machine.ui  cash_flow_new_item.ui  clear_history.ui  edit_close_apps.ui  edit_user.ui  history.ui  machine_info.ui  main.ui  new_ticket.ui  plugins.ui  prefs.ui  remove_credit.ui  remove_time.ui  select_machine_category.ui  set_price_per_hour.ui  unblock_machine.ui  userinfo.ui  view_all_tickets.ui
openlh-server/debian/: changelog  control  files  menu  openlh-server.substvars  rules
openlh-server/plugins/: Makefile.am  __init__.py
openlh-server/plugins/example/: Makefile.am  __init__.py
openlh-server/po/: POTFILES.in  openlh-server.pot  pt_BR.po
openlh-server/src/: Makefile.am  openlh-server
openlh-server/src/OpenlhServer/: Makefile.am  __init__.py  config.py  config.py.in  daemon.py  defaults.py  g_timer.py  globals.py  plugins_manager.py  utils.py
openlh-server/src/OpenlhServer/db/: __init__.py  basemanager.py  globals.py  managers.py  models.py  session.py
openlh-server/src/OpenlhServer/http/: Makefile.am  __init__.py  serve.py  views.py
openlh-server/src/OpenlhServer/plugins/: Makefile.am  __init__.py
openlh-server/src/OpenlhServer/plugins/example/: Makefile.am  __init__.py
openlh-server/src/OpenlhServer/ui/: DateEdit.py  HourEntry.py  Makefile.am  SearchEntry.py  __init__.py  dialogs.py  icons.py  main.py  menus.py  plugins.py  prefs.py  tray.py  treeview.py  utils.py
