## Process this file with automake to produce Makefile.in
SUBDIRS = data gnomeapplet src po

#DISTCLEANFILES = \
#	intltool-extract \
#	intltool-merge \
#	intltool-update

#EXTRA_DIST = \
#	intltool-extract.in \
#	intltool-merge.in \
#	intltool-update.in

CLEANFILES = \
	src/OpenlhClient/*.pyc \
	src/OpenlhClient/*.pyo \
	src/OpenlhClient/ui/*.pyc \
	src/OpenlhClient/ui/*.pyo 

