## Process this file with automake to produce Makefile.in
SUBDIRS = data gnomeapplet src po

#DISTCLEANFILES = \
#	intltool-extract \
#	intltool-merge \
#	intltool-update

EXTRA_DIST = \
	debian \
	build_deb_package.sh \
	glade2gtkbuilder \
	setup_win32.py

CLEANFILES = \
	src/OpenlhClient/*.pyc \
	src/OpenlhClient/*.pyo \
	src/OpenlhClient/ui/*.pyc \
	src/OpenlhClient/ui/*.pyo 

