## Process this file with automake to produce Makefile.in
SUBDIRS = data src po plugins

#DISTCLEANFILES = \
#	intltool-extract \
#	intltool-merge \
#	intltool-update

#EXTRA_DIST = \
#	intltool-extract.in \
#	intltool-merge.in \
#	intltool-update.in

CLEANFILES = \
	src/OpenlhServer/*.pyc \
	src/OpenlhServer/*.pyo \
	src/OpenlhServer/ui/*.pyc \
	src/OpenlhServer/ui/*.pyo


