## Process this file with automake to produce Makefile.in
SUBDIRS = data src po plugins

#DISTCLEANFILES = \
#	intltool-extract \
#	intltool-merge \
#	intltool-update

EXTRA_DIST = \
	debian \
	build_deb_package.sh \
	glade2gtkbuilder \
	setup_win32.py

CLEANFILES = \
	src/OpenlhServer/*.pyc \
	src/OpenlhServer/*.pyo \
	src/OpenlhServer/ui/*.pyc \
	src/OpenlhServer/ui/*.pyo


