
old_glade_files = \
	add_credit.glade \
	add_machine.glade \
	add_time.glade \
	add_user.glade \
	edit_user.glade \
	block_machine.glade \
	main.glade \
	prefs.glade \
	remove_credit.glade \
	unblock_machine.glade \
	userinfo.glade \
	machine_info.glade \
	cash_flow_new_item.glade \
	remove_time.glade \
	history.glade \
	clear_history.glade \
	set_price_per_hour.glade \
	new_ticket.glade

EXTRA_DIST = $(old_glade_files) 
