
uidir = $(datadir)/OpenlhServer/ui
ui_DATA = \
	add_credit.ui \
	add_user.ui \
	edit_user.ui \
	block_machine.ui \
	add_machine.ui \
	add_machine_category.ui \
	main.ui \
	prefs.ui \
	remove_credit.ui \
	unblock_machine.ui \
	userinfo.ui \
	machine_info.ui \
	cash_flow_new_item.ui \
	add_time.ui \
	remove_time.ui \
	history.ui \
	clear_history.ui \
	set_price_per_hour.ui \
	plugins.ui

EXTRA_DIST = $(ui_DATA) 
