
uidir = $(datadir)/OpenlhServer/ui
ui_DATA = \
	add_credit.ui \
	add_user.ui \
	add_user_category.ui \
	edit_user.ui \
	block_machine.ui \
	add_machine.ui \
	add_machine_category.ui \
	main.ui \
	prefs.ui \
	remove_credit.ui \
	unblock_machine.ui \
	userinfo.ui \
	machine_info.ui \
	cash_flow_new_item.ui \
	add_time.ui \
	remove_time.ui \
	history.ui \
	clear_history.ui \
	set_price_per_hour.ui \
	plugins.ui \
	select_machine_category.ui \
	new_ticket.ui \
	view_all_tickets.ui \
	edit_close_apps.ui

EXTRA_DIST = $(ui_DATA) 
